--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-	"name": "validation-lib",
+	"name": "svelte-checkmate",
 	"version": "0.0.1",
 	"scripts": {
 		"dev": "vite dev",
@@ -69,6 +69,7 @@
 	"packageManager": "pnpm@10.12.4+sha512.5ea8b0deed94ed68691c9bad4c955492705c5eeb8a87ef86bc62c74a26b037b08ff9570f108b2e4dbd1dd1a9186fea925e527f141c648e85af45631074680184",
 	"dependencies": {
 		"@standard-schema/spec": "^1.0.0",
+		"arktype": "^2.1.20",
 		"zod": "^4.0.5"
 	}
 }
