--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
 	"name": "svelte-checkmate",
-	"version": "0.0.1",
+	"version": "0.0.2",
 	"scripts": {
 		"dev": "vite dev",
 		"build": "vite build && npm run prepack",
@@ -11,6 +11,11 @@
 		"check:watch": "svelte-kit sync && svelte-check --tsconfig ./tsconfig.json --watch",
 		"format": "prettier --write .",
 		"lint": "prettier --check . && eslint ."
+	},
+	"homepage": "https://github.com/nevillebrem/svelte-checkmate#readme",
+	"repository": {
+		"type": "git",
+		"url": "https://github.com/nevthereal/svelte-checkmate.git"
 	},
 	"files": [
 		"dist",
